--- a/app/src/main/res/layout/activity_face_live_auth.xml
+++ b/app/src/main/res/layout/activity_face_live_auth.xml
@@ -151,6 +151,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginTop="20dp"
             android:text="刷脸认证"
+            android:gravity="center"
             android:textColor="@color/color_text_light" />
 
     </LinearLayout>
